--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -141,3 +141,16 @@ input.form-control {
     outline:none;
   }
 }
+
+.checkout .slash {
+  margin-top: 60px;
+  float: left;
+  margin-left: -5px;
+  margin-right: -5px;
+}
+
+.checkout .card_code {
+  @media(max-width: 480px){
+    clear: both;
+  }
+}
