[bugfix] mobile logo on checkout page disappears
I show up mobile logo on checkout page

--- a/app/views/layouts/redesign/_logo.html.slim
+++ b/app/views/layouts/redesign/_logo.html.slim
@@ -2,6 +2,6 @@
   header
     .nav-menu.nav-alert-top
       .container-fluid.nav-menu-container
-        .masthead.text-center.hidden-xs
+        .masthead.text-center
           = link_to root_path
             = image_tag src='new-logo.svg', :class => 'nav-logo', :alt => 'Fame & Partners'
