--- a/app/views/layouts/redesign/_logo.html.slim
+++ b/app/views/layouts/redesign/_logo.html.slim
@@ -2,6 +2,9 @@
   header
     .nav-menu.nav-alert-top
       .container-fluid.nav-menu-container
-        .masthead.text-center
+        .masthead.text-center.hidden-xs
           = link_to root_path
             = image_tag src='new-logo.svg', :class => 'nav-logo', :alt => 'Fame & Partners'
+        .masthead.text-center.visible-xs
+          = link_to root_path
+            = image_tag src='logo-mobile.svg', :class => 'mobile-logo', :alt => 'Fame & Partners'
