--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -53,57 +53,136 @@ ruby:
 
 - cache [:layout, :header, spree_user_signed_in?], expires_in: configatron.cache.expire.long do
   header
-    .nav-menu.nav-alert-top
-      .container-fluid.nav-menu-container
-        .masthead.pull-left.hidden-xs
-          = link_to root_path
-            = image_tag src='new-logo.svg', :class => 'nav-logo', :alt => 'Fame & Partners'
 
-        .masthead.pull-left.visible-xs
-          = link_to root_path do
-            = image_tag src='logo-mobile.svg', :class => 'mobile-logo', :alt => 'Fame & Partners'
+    nav.navbar.navbar-default.visible-xs role="navigation"
+      .navbar-header
+        button.navbar-toggle data-target="#example-navbar-collapse" data-toggle="collapse" type="button"
+          span.sr-only Toggle navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+        a.navbar-brand href="#"  SHOP
+      #example-navbar-collapse.collapse.navbar-collapse
+        ul.nav.navbar-nav
+          li
+            a.dropdown-toggle data-toggle="dropdown" href="#"
+              | EVENTS
+              b.caret
+            ul.dropdown-menu
+              li
+                a href="#"  jmeter1
+              li
+                a href="#"  EJB
+              li
+                a href="#"  Jasper Report
+              li.divider
+              li
+                a href="#"  Separated link
+              li.divider
+              li
+                a href="#"  One more separated link
+          li
+            a.dropdown-toggle data-toggle="dropdown" href="#"
+              | STYLES
+              b.caret
+            ul.dropdown-menu
+              li
+                a href="#"  jmeter2
+              li
+                a href="#"  EJB
+              li
+                a href="#"  Jasper Report
+              li.divider
+              li
+                a href="#"  Separated link
+              li.divider
+              li
+                a href="#"  One more separated link
+          li
+            a href="#"
+              | COLORS
+              b.caret
+          li
+            a href="#"
+              | EXPRESS MAKING
+              b.caret
+          li.dropdown
+            a.dropdown-toggle data-toggle="dropdown" href="#"
+              | Java
+              b.caret
+            ul.dropdown-menu
+              li
+                a href="#"  jmeter
+              li
+                a href="#"  EJB
+              li
+                a href="#"  Jasper Report
+              li.divider
+              li
+                a href="#"  Separated link
+              li.divider
+              li
+                a href="#"  One more separated link
 
-        ul.primary.pull-left.hidden-sm.hidden-xs.hidden-xxs
-          = render partial: 'layouts/redesign/mega_menu/shop'
-          = render partial: 'layouts/redesign/mega_menu/lookbook'
-          li.menu-item
-            = link_to 'Blog', 'http://fameandpartners.tumblr.com/', class: 'menu-item--link'
 
-        ul.secondary.pull-right
-          - if Features.active?(:moodboard)
-            li.menu-item.hidden-xs.hidden-sm
-              = link_to wishlist_path, class: 'menu-item--link', id: 'moodboard-trigger' do
-                span.visible-sm
-                  = image_tag "Heart.svg"
-                span.hidden-sm.hidden-xs#moodboard-counter
-                  | Moodboard &nbsp;
 
-          li.shop.menu-item.account-btn.hidden-sm.hidden-xs.hidden-xxs
-            = render "layouts/redesign/header/my_account_dropdown"
 
-          li.shop.menu-item.account-btn.visible-sm.visible-xs.visible-xxs
-            = render "layouts/redesign/header/my_account_dropdown_mobile"
 
-          li.menu-item
-            a.menu-item--link.search href="#"
-              = image_tag "_icons/search.svg", class: "nav-mobile-logo"
-            .search-bar.invis
-              a.close-search href="#"
-                = image_tag "close.svg", alt: 'Close'
-              .container-fluid.search-form
-                .col-md-6.col-md-offset-3
-                  .col-md-10
-                    .input-group.margin-bottom-sm
-                      = form_tag search_path, method: :get do
-                        input.form-control id='input-search' name='q' placeholder=("Search here...") type="text"
-                        span
-                          button.invis-fix Enter
 
-          li#cart-trigger.menu-item
-            = link_to spree.checkout_path, class: 'menu-item--link' do
-              span.visible-sm.visible-xs.visible-xxs = image_tag "_icons/shopping-bag.svg", class: 'nav-mobile-logo', alt: 'Cart'
-              span.hidden-sm.hidden-xs.hidden-xxs cart:
-              span#cart-item-count 0
+
+
+
+    /.nav-menu.nav-alert-top
+      /.container-fluid.nav-menu-container
+        /.masthead.pull-left.hidden-xs
+          /= link_to root_path
+            /= image_tag src='new-logo.svg', :class => 'nav-logo', :alt => 'Fame & Partners'
+/
+        /.masthead.pull-left.visible-xs
+          /= link_to root_path do
+            /= image_tag src='logo-mobile.svg', :class => 'mobile-logo', :alt => 'Fame & Partners'
+/
+        /ul.primary.pull-left.hidden-sm.hidden-xs.hidden-xxs
+          /= render partial: 'layouts/redesign/mega_menu/shop'
+          /= render partial: 'layouts/redesign/mega_menu/lookbook'
+          /li.menu-item
+            /= link_to 'Blog', 'http://fameandpartners.tumblr.com/', class: 'menu-item--link'
+/
+        /ul.secondary.pull-right
+          /- if Features.active?(:moodboard)
+            /li.menu-item.hidden-xs.hidden-sm
+              /= link_to wishlist_path, class: 'menu-item--link', id: 'moodboard-trigger' do
+                /span.visible-sm
+                  /= image_tag "Heart.svg"
+                /span.hidden-sm.hidden-xs#moodboard-counter
+                  /| Moodboard &nbsp;
+/
+          /li.shop.menu-item.account-btn.hidden-sm.hidden-xs.hidden-xxs
+            /= render "layouts/redesign/header/my_account_dropdown"
+/
+          /li.shop.menu-item.account-btn.visible-sm.visible-xs.visible-xxs
+            /= render "layouts/redesign/header/my_account_dropdown_mobile"
+/
+          /li.menu-item
+            /a.menu-item--link.search href="#"
+              /= image_tag "_icons/search.svg", class: "nav-mobile-logo"
+            /.search-bar.invis
+              /a.close-search href="#"
+                /= image_tag "close.svg", alt: 'Close'
+              /.container-fluid.search-form
+                /.col-md-6.col-md-offset-3
+                  /.col-md-10
+                    /.input-group.margin-bottom-sm
+                      /= form_tag search_path, method: :get do
+                        /input.form-control id='input-search' name='q' placeholder=("Search here...") type="text"
+                        /span
+                          /button.invis-fix Enter
+/
+          /li#cart-trigger.menu-item
+            /= link_to spree.checkout_path, class: 'menu-item--link' do
+              /span.visible-sm.visible-xs.visible-xxs = image_tag "_icons/shopping-bag.svg", class: 'nav-mobile-logo', alt: 'Cart'
+              /span.hidden-sm.hidden-xs.hidden-xxs cart:
+              /span#cart-item-count 0
 
 = render 'layouts/redesign/campaigns/auto_apply_promo_code'
 
