--- a/app/assets/transient_content/20150715_polyvore/stylesheets/20150715_polyvore.css.scss
+++ b/app/assets/transient_content/20150715_polyvore/stylesheets/20150715_polyvore.css.scss
@@ -32,11 +32,12 @@
 
       .vex-dialog-message {
         text-align: center;
-        h2 { }
+        h2 {  font-size:   26px; }
         p {
-          font-size:   30px;
+          font-size:   26px;
           font-weight: 300;
           strong {
+            font-size:   30px;
             font-weight: 500;
           }
         }
