Also use eligible but unapplied promotions in discount display

--- a/app/views/modals/_modal_20150715_polyvore.html.slim
+++ b/app/views/modals/_modal_20150715_polyvore.html.slim
@@ -76,6 +76,7 @@ javascript:
         });
 
         polyvore_popup.success = function (data) {
+          $.cookie('polyvore_thanked', 'false');
           if (data.status == 'ok') {
             polyvore_thanks();
           }
