[copy] Instagram terms

--- a/app/views/statics/ecom_terms.html.slim
+++ b/app/views/statics/ecom_terms.html.slim
@@ -187,6 +187,18 @@
 
       p Updated May 2015
 
+      h2 Instagram Competition 'Win your dream Fame & Partners dress' - Game of Skill
+
+      p To enter the competition, entrants must have a Polyvore account and create 1 or more sets using their Fame & Partners dress of choice. Users can enter multiple times, but entrants must be unique.
+
+      p The winner will be judged by @lucyhelena based on creativity and style.
+
+      p Winner announcement will happen on Instagram via post on @fameandpartners.
+
+      p The winner will get a Fame & Partners dress of their choice. The winner can select customisations and customised colours as displayed on www.fameandpartners.com. Prize cannot be exchanged for cash.
+
+      p Entries close Saturday 25th July 5pm AEST.
+
       h2 15% off new season sale
 
       p Offer valid on full price new season styles only. Prices as marked. Offer valid online at fameandpartners.com only. Offer not valid on customisations, custom colours or express making fees. Offer valid between 23rd - 30th of June 2015. Orders placed during the sale from AU, US or UK incur a $11.70 shipping fee. All other countries incur a $30 shipping fee.
