--- a/app/views/statics/ecom_terms.html.slim
+++ b/app/views/statics/ecom_terms.html.slim
@@ -189,7 +189,7 @@
 
       h2 Instagram Competition 'Win your dream Fame & Partners dress' - Game of Skill
 
-      p To enter the competition, entrants must have a Polyvore account and create 1 or more sets using their Fame & Partners dress of choice. Users can enter multiple times, but entrants must be unique.
+      p To enter the competition, entrants must have a Polyvore account and create 1 or more sets using their Fame & Partners dress of choice. Users can enter multiple times, but entries must be unique.
 
       p The winner will be judged by @lucyhelena based on creativity and style.
 
