add dropdown effect

--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -542,6 +542,8 @@ li#cart-trigger {
         .dropdown-menu{
           position: static;
           background-color: #f8f8f8;
+          border: 0px;
+          box-shadow: none;
         }
       }
     }
