[feature] add scroll to payment detail section in checkout
I add scroll to payment detail section in checkout page

--- a/app/views/spree/checkout/payment/_gateway.html.slim
+++ b/app/views/spree/checkout/payment/_gateway.html.slim
@@ -4,6 +4,9 @@ ruby:
   options_hash_select = { class: 'form-control form-control-md selectbox' }
   options_hash[:autocomplete] = 'off' if Rails.env.production?
 
+= content_for :inline_javascript do
+  | $('.checkout-section-title:last').scrollView()
+
 .row
   .col-md-12.form-group
     label for="number"  Card number
